# pga-axioms

./: .gitignore  Cargo.toml  README.md
site/: index.html  index.js  package-lock.json  package.json  webpack.config.js
src/: axioms.rs  geometry.rs  interop.rs  lib.rs  line.rs  main.rs  multivector.rs  point.rs  translator.rs  utils.rs
