[package]
name = "pga_axioms"
version = "0.1.0"
authors = ["Michael Walczyk <mwalczyk2@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.47"
serde = { version = "1.0.123", features = ["derive"] }
wasm-bindgen = { version =  "0.2.63", features = ["serde-serialize"] }
web-sys = { version = "0.3.47", features = ["console"] }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
